<resources>
    <string name="application_name">KitBag</string>
    <string name="forgotten_password">Forgotten Password?</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="contact">Contact</string>
    <string name="email_optional">Email (Optional)</string>
    <string name="username">Username</string>
    <string name="district">District</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="create_post">Create post</string>
    <string name="post_title">Title</string>
    <string name="post_description">Description</string>
    <string name="ButtonPostItem">Post Item</string>
    <string name="all_fields_are_required">*All fields are required</string>
    <string name="by_posting_this_ad_you_agree_to_our_terms_and_conditions"> <br /> <font color='#FFFF0000'>Terms &amp; Conditions</font></string>
    <string name="otp">OTP</string>
    <string name="resend_otp"><u>RESEND OTP</u></string>
    <string name="nav_chat">Chat</string>
    <string name="nav_my_posts">My Posts</string>
    <string name="nav_my_cart">My Cart</string>
    <string name="nav_change_password">Change Password</string>
    <string name="nav_language">Language</string>
    <string name="nav_dark_mode">Dark Mode</string>
    <string name="nav_discover_kitbag">Discover KitBag</string>
    <string name="nav_terms_conditions"><![CDATA[Terms & Conditions]]></string>
    <string name="nav_contact_us">Contact Us</string>
    <string name="nav_about_us">About Us</string>
    <string name="AgentContact">Agents Contact Number</string>
    <string name="nav_log_out">Log out</string>
    <string name="nav_login">Login</string>
    <string name="app_name">KitBag</string>
    <string name="send_otp_message">One Time Password (OTP) has been sent to </string>
    <string name="number_hint">+8801XXXXXXXX</string>
    <string name="didnt_get_otp">Didn\'t get OTP?</string>
    <string name="update_password">Update Password</string>
    <string name="old_password">Enter Old Password</string>
    <string name="new_password">Enter New Password</string>
    <string name="conform_new_password">Confirm New Password</string>
    <string-array name="Districts">
        <item>Bagerhat</item>
        <item>Bandarban</item>
        <item>Barguna</item>
        <item>Barisal</item>
        <item>Bhola</item>
        <item>Bogra</item>
        <item>Brahmanbaria</item>
        <item>Chandpur</item>
        <item>Chapainawabganj</item>
        <item>Chittagong</item>
        <item>Chuadanga</item>
        <item>Cox\'s Bazar</item>
        <item>Comilla</item>
        <item>Dhaka</item>
        <item>Dinajpur</item>
        <item>Faridpur</item>
        <item>Feni</item>
        <item>Gaibandha</item>
        <item>Gazipur</item>
        <item>Gopalganj</item>
        <item>Habiganj</item>
        <item>Joypurhat</item>
        <item>Jamalpur</item>
        <item>Jessore</item>
        <item>Jhalokati</item>
        <item>Jhenaidah</item>
        <item>Khagrachari</item>
        <item>Khulna</item>
        <item>Kishoreganj</item>
        <item>Kurigram</item>
        <item>Kushtia</item>
        <item>Lakshmipur</item>
        <item>Lalmonirhat</item>
        <item>Madaripur</item>
        <item>Magura</item>
        <item>Manikganj</item>
        <item>Meherpur</item>
        <item>Moulvibazar</item>
        <item>Munshiganj</item>
        <item>Mymensingh</item>
        <item>Naogaon</item>
        <item>Narail</item>
        <item>Narayanganj</item>
        <item>Narsingdi</item>
        <item>Natore</item>
        <item>Netrakona</item>
        <item>Nilphamari</item>
        <item>Noakhali</item>
        <item>Pabna</item>
        <item>Panchagarh</item>
        <item>Patuakhali</item>
        <item>Pirojpur</item>
        <item>Rajbari</item>
        <item>Rajshahi</item>
        <item>Rangpur</item>
        <item>Rangamati</item>
        <item>Satkhira</item>
        <item>Shariatpur</item>
        <item>Sherpur</item>
        <item>Sirajganj</item>
        <item>Sunamganj</item>
        <item>Sylhet</item>
        <item>Tangail</item>
        <item>Thakurgaon</item>
    </string-array>
    <string-array name="Bagerhat">
        <item>Bagerhat Sadar</item>
        <item>Chitalmari</item>
        <item>Fakirhat</item>
        <item>Kachua</item>
        <item>Mollahat</item>
        <item>Mongla</item>
        <item>Morrelganj</item>
        <item>Rampal</item>
        <item>Sarankhola</item>
    </string-array>
    <string-array name="Bandarban">
        <item>Ali Kadam</item>
        <item>Bandarban Sadar</item>
        <item>Lama</item>
        <item>Naikhongchhari</item>
        <item>Rowangchhari</item>
        <item>Ruma</item>
        <item>Thanchi</item>
    </string-array>
    <string-array name="Barguna">
        <item>Amtali</item>
        <item>Bamna</item>
        <item>Barguna Sadar</item>
        <item>Betagi</item>
        <item>Patharghata</item>
        <item>Taltali</item>
    </string-array>
    <string-array name="Barisal">
        <item>Agailjhara</item>
        <item>Babuganj</item>
        <item>Bakerganj</item>
        <item>Banaripara</item>
        <item>Gaurnadi</item>
        <item>Hizla</item>
        <item>Barishal Sadar</item>
        <item>Mehendiganj</item>
        <item>Muladi</item>
        <item>Wazirpur</item>
    </string-array>
    <string-array name="Bhola">
        <item>Bhola Sadar</item>
        <item>Burhanuddin</item>
        <item>Char Fasson</item>
        <item>Daulatkhan</item>
        <item>Lalmohan</item>
        <item>Manpura</item>
        <item>Tazumuddin</item>
    </string-array>
    <string-array name="Bogra">
        <item>Adamdighi</item>
        <item>Bogura Sadar</item>
        <item>Dhunat</item>
        <item>Dhupchanchia</item>
        <item>Gabtali</item>
        <item>Kahaloo</item>
        <item>Nandigram</item>
        <item>Sariakandi</item>
        <item>Shajahanpur</item>
        <item>Sherpur</item>
        <item>Shibganj</item>
        <item>Sonatola</item>
    </string-array>
    <string-array name="Brahmanbaria">
        <item>Akhaura</item>
        <item>Bancharampur</item>
        <item>Brahmanbaria Sadar </item>
        <item>Kasba</item>
        <item>Nabinagar</item>
        <item>Nasirnagar</item>
        <item>Sarail</item>
        <item>Ashuganj</item>
        <item>Bijoynagar</item>
    </string-array>
    <string-array name="Chandpur">
        <item>Chandpur Sadar</item>
        <item>Faridganj</item>
        <item>Haimchar</item>
        <item>Haziganj</item>
        <item>Kachua</item>
        <item>Matlab Dakshin</item>
        <item>Matlab Uttar</item>
        <item>Shahrasti</item>
    </string-array>
    <string-array name="Chapainawabganj">
        <item>Bholahat</item>
        <item>Gomastapur</item>
        <item>Nachole</item>
        <item>Nawabganj Sadar</item>
        <item>Shibganj</item>
    </string-array>
    <string name="become_a_deliveryman">Become a Deliveryman</string>
    <string name="home">Home</string>
    <string name="ok">Ok</string>
    <string name="how_do_i_become_a_deliveryman">How do I become a deliveryman?</string>
    <string name="to_become_a_deliveryman">To become a deliveryman:</string>
    <string name="_1_tap_the_profile_icon_on_the_top_right">1. Tap the profile icon (on the top right)</string>
    <string name="_2_tap_become_a_deliveryman">2. Tap become a deliveryman</string>
    <string name="_3_tap_proceed">3. Tap proceed</string>
    <string name="_4_capture_front_of_your_nid_and_submit">4. Capture front of your NID and submit</string>
    <string name="_5_capture_back_of_your_nid_and_submit">5. Capture back of your NID and submit</string>
    <string name="_5_take_a_photo_of_your_face_and_submit">6. Take a photo of your face and submit</string>
    <string name="_6_fill_in_all_information_and_submit">7. Fill in all information and submit</string>
    <string name="_7_tap_confirm">8. Tap confirm</string>
    <string name="_7_tap_got_it">9. Tap got it</string>
    <string name="fragment_confirm_deliveryman_registration">You just submitted your deliveryman application.\nThen you have to go to any of your nearest KitBag agent to get approval of your application.\nAfter getting the approval you will be a deliveryman.</string>
    <string name="how_do_i_change_my_current_user_password">How do I change my current user password?</string>
    <string name="to_change_password">To change password:</string>
    <string name="_2_tap_change_password">2. Tap change password</string>
    <string name="_3_enter_old_password_and_provide_new_password">3. Enter old password and provide new password</string>
    <string name="_4_tap_update_password">4. Tap update password</string>
    <string name="if_you_are_not_already_logged_in_you_will_need_to_log_in_to_update_your_current_password">If you are not already logged in, you will need to log in to update your current password.</string>
    <string name="_2_tap_login">2. Tap login</string>
    <string name="_2_tap_my_post">2. Tap my post</string>
    <string name="_3_tap_the_post_from_the_list_of_your_published_post">3. Tap the post from the list of your published post</string>
    <string name="_1_login_to_your_account">1. Login to your account</string>
    <string name="_4_tap_the_post_from_your_list_can_search_by_post_owner_s_phone_number">4. Tap the post from your list (Can search by post owner\'s phone number)</string>
    <string name="how_do_i_edit_my_post">How do I edit my post?</string>
    <string name="to_edit_a_post">To edit a post:</string>
    <string name="_4_tap_edit_post">4. Tap edit post</string>
    <string name="_5_edit_and_tap_update_post">5. Edit and tap update post</string>
    <string name="how_do_i_agent_deliver_product_to_the_receiver">How do I (Agent) deliver product to the receiver?</string>
    <string name="to_deliver_product">To deliver product:</string>
    <string name="_3_tap_product_to_deliver">3. Tap product to deliver</string>
    <string name="_6_provide_the_receiver_contact_number_and_tap_send_otp">6. Provide the receiver contact number and Tap send OTP</string>
    <string name="_7_an_otp_will_be_send_to_the_given_receiver_number">7. An OTP will be send to the given receiver number</string>
    <string name="_8_take_the_otp_from_the_receiver_and_verify">8. Take the OTP from the receiver and verify</string>
    <string name="_9_product_handover_agent_to_receiver">9. If verify success, the post status will be updated to Delivered. And then you have to deliver the product to the receiver</string>
    <string name="how_do_i_recover_my_user_password">How do I recover my user password?</string>
    <string name="to_recover_password">To recover password:</string>
    <string name="_3_tap_forgotten_password">3. Tap forgotten password</string>
    <string name="_4_provide_your_registered_phone_number">4. Provide your registered phone number</string>
    <string name="_5_tap_next">5. Tap next</string>
    <string name="provide_the_otp_which_has_been_sent_to_your_given_phone_number">6. Provide the OTP which has been sent to your given phone number</string>
    <string name="_7_tap_verify">7. Tap verify</string>
    <string name="_8_set_new_password">8. Set new password</string>
    <string name="_9_tap_reset_password">9. Tap reset password</string>
    <string name="_5_tap_product_handover_process">5. Tap product handover process</string>
    <string name="become_an_agent">Become an Agent</string>
    <string name="agent_control">Agent Control</string>
    <string name="inprogress">Inprogress</string>
</resources>