<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:showIn="navigation_view">

    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/ic_home"
        android:title="@string/home" />

    <item
        android:id="@+id/nav_agent"
        android:icon="@drawable/ic_traveller"
        android:title="@string/become_an_agent" />

    <item
        android:id="@+id/nav_deliveryman"
        android:icon="@drawable/ic_traveller"
        android:title="@string/become_a_deliveryman" />

    <item
        android:id="@+id/nav_chat"
        android:icon="@drawable/ic_chat"
        android:title="@string/nav_chat" />

    <item
        android:id="@+id/nav_my_post"
        android:icon="@drawable/ic_my_post_list"
        android:title="@string/nav_my_posts" />

    <item
        android:id="@+id/nav_my_cart"
        android:icon="@drawable/ic_cart"
        android:title="@string/nav_my_cart" />

    <item
        android:id="@+id/nav_inprogress"
        android:icon="@drawable/ic_my_post_list"
        android:title="@string/inprogress" />

    <item
        android:id="@+id/nav_agent_control"
        android:icon="@drawable/ic_cart"
        android:title="@string/agent_control" />

    <item
        android:id="@+id/nav_change_password"
        android:icon="@drawable/ic_change_password"
        android:title="@string/nav_change_password" />

    <item
        android:id="@+id/nav_language"
        android:icon="@drawable/ic_language"
        android:title="@string/nav_language" />

    <item
        android:id="@+id/nav_dark_mode"
        app:actionLayout="@layout/switch_menu_dark_mode"
        android:icon="@drawable/ic_dark_mode"
        android:title="@string/nav_dark_mode" />

    <item
        android:id="@+id/nav_discover_kitbag"
        android:icon="@drawable/ic_language"
        android:title="@string/nav_discover_kitbag" />

    <item
        android:id="@+id/nav_terms_conditions"
        android:icon="@drawable/ic_password"
        android:title="@string/nav_terms_conditions" />

    <item
        android:id="@+id/nav_contact"
        android:icon="@drawable/ic_contact"
        android:title="@string/nav_contact_us" />

    <item
        android:id="@+id/nav_about"
        android:icon="@drawable/ic_info"
        android:title="@string/nav_about_us" />

    <item
        android:id="@+id/nav_logout"
        android:icon="@drawable/ic_logout"
        android:title="@string/nav_log_out" />

</menu>