<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <item
        android:id="@+id/nav_login"
        android:icon="@drawable/ic_profile"
        android:title="@string/nav_login" />

    <item
        android:id="@+id/nav_language"
        android:icon="@drawable/ic_language"
        android:title="@string/nav_language" />

    <item
        android:id="@+id/nav_dark_mode"
        android:icon="@drawable/ic_dark_mode"
        android:title="@string/nav_dark_mode"
        app:actionLayout="@layout/switch_menu_dark_mode" />

    <item
        android:id="@+id/nav_discover_kitbag"
        android:icon="@drawable/ic_language"
        android:title="@string/nav_discover_kitbag" />

    <item
        android:id="@+id/nav_terms_conditions"
        android:icon="@drawable/ic_password"
        android:title="@string/nav_terms_conditions" />

    <item
        android:id="@+id/nav_contact"
        android:icon="@drawable/ic_contact"
        android:title="@string/nav_contact_us" />

    <item
        android:id="@+id/nav_about"
        android:icon="@drawable/ic_info"
        android:title="@string/nav_about_us" />

</menu>